--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Gifted Tech",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro",
     "bcryptjs": "^3.0.2",
     "body-parser": "*",
     "express": "*",
